included the names

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
     <h1>Shapes</h1>
-    <div class="triangle"></div>
-    <div class="square"></div>
-    <div class="rectangle"></div>
-    <div class="circle"></div>
-    <div class="parallelogram"></div>
-    <div class="trapezium"></div>
-    <div class="star"></div>
+    <div class="triangle"><p>Triangle</p></div>
+    <div class="square"><p>Square</p></div>
+    <div class="rectangle"><p>Rectangle</p></div>
+    <div class="circle"><p>Circle</p></div>
+    <div class="parallelogram"><p>Parallelogram</p></div>
+    <div class="trapezium"><p>Tripezoid</p></div>
+    <div class="star"><p>Star</p></div>
 </body>
 </html>
